qbittorrent/deployment_qbittorrent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: qbittorrent
  name: qbittorrent
  namespace: klopfi-qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
      - image: lscr.io/linuxserver/qbittorrent:latest
        name: qbittorrent
        volumeMounts:
        - name: config
          mountPath: /config
        - name: data
          mountPath: /downloads
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: qbittorrent-data
      - name: config
        persistentVolumeClaim:
          claimName: qbittorrent-config
