qbittorrent/svc_qbittorrent-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-server
  namespace: klopfi-qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
