qbittorrent/svc_qbittorrent-tracker.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-tracker
  namespace: klopfi-qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
    - name: tracker-tcp
      protocol: TCP
      port: 6881
      targetPort: 6881
    - name: tracker-udp
      protocol: UDP
      port: 6881
      targetPort: 6881
