qbittorrent/ing_qbittorrent.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    octodns-kubernetes.rybni.co/hostname: torrents.klopfi.net
  name: qbittorrent-ingress
  namespace: klopfi-qbittorrent
spec:
  ingressClassName: nginx
  rules:
  - host: torrents.klopfi.net
    http:
      paths:
      - backend:
          service:
            name: qbittorrent-server
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - torrents.klopfi.net
    secretName: torrents-server-tls
